<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.HomeFragment">

    <!--Google Map view-->
    <!--These parameters are specifically from the Google Maps API documentation-->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="4dp" />

    <!--Grouping the three user data boxes together-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:layout_marginHorizontal="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/building_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_outline"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_buildings"
                android:textSize="16sp"
                android:textColor="@color/QUnavy"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/building_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FillerNumbers"
                android:textSize="16sp"
                android:textColor="@color/QUnavy"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dining_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_outline"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_dining_halls"
                android:textSize="16sp"
                android:textColor="@color/QUnavy"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/dining_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FillerNumbers"
                android:textSize="16sp"
                android:textColor="@color/QUnavy"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/residence_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_outline"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_residence_halls"
                android:textSize="16sp"
                android:textColor="@color/QUnavy"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/residence_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FillerNumbers"
                android:textSize="16sp"
                android:textColor="@color/QUnavy"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <!--Map Position Reset Button-->
    <Button
        android:id="@+id/reset_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/QUnavy"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/reset_map"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

</FrameLayout>