...
            android:textColor="@color/QUblue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!--Hint for the user on what to input in the text box-->
        <AutoCompleteTextView
            android:id="@+id/addBuildingTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_a_building_name"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_below="@id/addBuildingHeader"
            android:background="@drawable/blue_border"
            android:layout_marginTop="16dp"
            android:maxLines="1" />

        <!--Save Button-->
        <TextView
            android:id="@+id/saveBuildingName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="12dp"
            android:textSize="20sp"
            android:text="@string/save"
            android:textColor="@color/white"
...
